# advertising-control

./: .gitignore  01_Budget_Control_Simulation.ipynb  02_Sponsored_Search_Campaign_Budget_Pacing.ipynb  03_Sponsored_Search_Campaign_Budget_Pacing copy.ipynb  advertising_budget_pacing.py  pyproject.toml  streamlit_app.py
notebooks/: 03_Sponsored_Search_Campaign_Budget_Pacing copy.ipynb
src/: PID_controller.py  advertising_budget_pacing.py  budget_based_controller.py  proportional_controller.py
tests/: test_PID_controller.py
