[tool.poetry]
name = "advertising-control"
version = "0.1.0"
description = "Applying control theory to marketing campaigns budget"
authors = ["Raul Vences <raul.ven.par@gmail.com>"]
readme = "README.md"
packages = [{include = "advertising_control"}]

[tool.poetry.dependencies]
python = "3.10.12"
matplotlib = "*"
jupyterlab = "*"
numpy = "*"
pandas = "*"
protobuf = "4.25.3"
altair = "^5.3.0"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
